objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Reassignment_Email_Batch__c</fullName>
        <formula>Account.Account_Reassignment_Email_Batch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Reassignment Email Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedID__c</fullName>
        <formula>Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basho_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basho Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <label>CBSA</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Connected__c</fullName>
        <formula>IF(CallDurationInSeconds &gt;= 60, 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Connected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Minutes__c</fullName>
        <formula>IF((MOD((CallDurationInSeconds )/60,1)*60) &gt; 10,
TEXT(FLOOR( (CallDurationInSeconds )/60)) + &quot;:&quot; + TEXT( FLOOR(MOD((CallDurationInSeconds )/60,1)*60) ),
TEXT(FLOOR( (CallDurationInSeconds )/60)) + &quot;:0&quot; + TEXT( FLOOR(MOD((CallDurationInSeconds )/60,1)*60) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (Minutes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Record_Count__c</fullName>
        <description>Checks to see if the call identifier field is blank, if it is not blank, then this field equals one</description>
        <formula>if( and(isblank(CallObject) == FALSE, CallDurationInSeconds &gt;= 0,  $User.ProfileId = &apos;00ej00000016H2H&apos;), 1, 0)</formula>
        <label>Call Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <formula>IF(CallDurationInSeconds &gt;= 480,&quot;Mega Conversation&quot;, 
IF(CallDurationInSeconds &gt;= 240,&quot;Conversation&quot;, 
IF (CallDurationInSeconds &gt; 0,&quot;Dial&quot;, 
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Built to enable mass closing of tasks through a workflow https://na16.salesforce.com/01Qj00000009cQV</description>
        <label>Close Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Key__c</fullName>
        <formula>Account.Porch_com_Company_Key_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Conversation_Call__c</fullName>
        <formula>IF(CallDurationInSeconds  &gt;=  240, 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversation Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dial__c</fullName>
        <formula>IF( CallObject  &lt;&gt; &quot;&quot;, 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this call was escalated to a manager.</inlineHelpText>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mega_Conversation_Call__c</fullName>
        <formula>IF(CallDurationInSeconds &gt;= 480, 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mega Conversation Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Agent__c</fullName>
        <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Account__c</fullName>
        <formula>IF(Account_Status__c = &quot;Premium&quot;, 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pro_Type__c</fullName>
        <formula>TEXT(Account.Pro_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Rating__c</fullName>
        <label>Quality Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_when_Created__c</fullName>
        <label>Role when Created</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Subtype__c</fullName>
        <label>Task Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>if( ISBLANK(Company_Phone__c),&quot;G&quot;, 

if( CONTAINS(&quot;206:209:213:253:310:323:360:408:415:425:503:509:510:530:559:562:604:619:626:650:661:702:707:714:760:775:778:805:818:831:858:867:909:916:925:949:951:971:236:250:604:778:867&quot;, left(SUBSTITUTE( Company_Phone__c , &quot;(&quot;, &quot;&quot;),3)),&quot;F - Pacfic&quot;, 

if( 
CONTAINS(&quot;208:250:303:307:385403:406:435:480:505:520:602:623:719:720:780:801:928:970:403:587:780&quot;, left(SUBSTITUTE( Company_Phone__c , &quot;(&quot;, &quot;&quot;),3)),&quot;E - Mountain&quot;, 

if( 
CONTAINS(&quot;204:205:210:214:217:218:224:225:228:251:254:256:262:270:281:306:308:309:312:314:316:318:319:320:325:334:337:361:402:405:409:414:417:430:432:469:479:501:504:507:512:515:563:573:580:601:605:608:612:615:618:620:630:636:641:651:660:662:682:708:712:713:715:731:763:769:773:785:806:815:816:817:830:832:847:901:903:913:915:918:920:931:936:940:952:956:972:979:985:204:306:431:639:807&quot;, left(SUBSTITUTE( Company_Phone__c , &quot;(&quot;, &quot;&quot;),3)),&quot;D - Central &quot;, 

if( 
CONTAINS(&quot;201:202:203:207:212:215:216:219:226:229:231:234:239:240:248:252:267:269:276:289:301:302:304:305:313:315:321:330:336:339:345:347:351:352:386:404:407:410:412:416:418:419:434:438:440:443:450:470:475:478:484:502:508:513:514:516:517:518:519:540:551:561:567:570:571:585:586:603:606:607:609:610:613:614:616:617:631:646:647:649:678:703:704:705:706:716:717:718:724:727:732:734:740:754:757:770:772:774:781:786:802:803:804:810:813:814:819:828:835:843:845:848:856:857:859:860:862:863:864:865:876:878:904:905:908:910:912:914:917:919:937:941:947:954:959:973:978:980:226:249:289:343:365:416:437:438:450:514:519:579:581:613:647:705:819:873:905&quot;, left(SUBSTITUTE( Company_Phone__c , &quot;(&quot;, &quot;&quot;),3)),&quot;C - Eastern&quot;, 

if( 
CONTAINS(&quot;506:709:902&quot;,LEFT(SUBSTITUTE(Company_Phone__c,&quot;(&quot;,&quot;&quot;),3)),&quot;B - Atlantic&quot;, 

if( 
CONTAINS(&quot;800:877&quot;,LEFT(SUBSTITUTE(Company_Phone__c,&quot;(&quot;,&quot;&quot;),3)),&quot;Toll Free&quot;,&quot;G - Toll Free/Other&quot; 

) 

))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_Role__c</fullName>
        <label>Warm Pass Role</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warm Pass by</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Commissioners, BackPorch</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoHo_Activity_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoHo Activity ID</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>Close_Task__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CLOSED</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.STATUS</columns>
        <columns>Close_Task__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>